src/test/compile-fail/issue-1900.rs
// error-pattern: main function is not allowed to have type parameters
fn main<T>() { }